m-for demo added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li m-on:click="this.go($event)" src="./ex_domlabeling.html">dom elements handling</li>
             <li m-on:click="this.go($event)" src="./ex_classstyle.html">class/style handling</li>
             <li m-on:click="this.go($event)" src="./ex_varscope.html">Scoped variables</li>
+            <li m-on:click="this.go($event)" src="./ex_forloop.html">For loop and arrays</li>
         </ul>
         <hr>
         <a href="#">Contact</a>
