--- a/examples/ex_benchmark.html
+++ b/examples/ex_benchmark.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
         crossorigin="anonymous">
     <link rel="stylesheet" href="./index.css" crossorigin="anonymous">
-    <script type="module" src="ex_benchmark.js"></script>
+    <script type="module" src="./ex_benchmark.js"></script>
 </head>
 
 <body class=pure m-control="Benchmark">
