--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
         <h2>Summary
             <hr>
         </h2>
-        <h3 m-on:click="this.go($event)" src="./intro.html">Introduction</h3>
-        <h3 m-on:click="this.go($event)" src="./getstarted.html">Get started</h3>
-        <h3 m-on:click="this.go($event)" src="./ex_interpolation.html">Examples</h3>
+        <h3 m-on:click="this.go($event)" src="./docs/intro.html">Introduction</h3>
+        <h3 m-on:click="this.go($event)" src="./docs/getstarted.html">Get started</h3>
+        <h3 m-on:click="this.go($event)" src="./examples/ex_interpolation.html">Examples</h3>
         <ul>
-            <li m-on:click="this.go($event)" src="./ex_interpolation.html">interpolation </li>
-            <li m-on:click="this.go($event)" src="./ex_2wdbinding.html">to way data binding</li>
-            <li m-on:click="this.go($event)" src="./ex_eventhandler.html">handling events</li>
-            <li m-on:click="this.go($event)" src="./ex_domlabeling.html">dom elements handling</li>
-            <li m-on:click="this.go($event)" src="./ex_classstyle.html">class/style handling</li>
-            <li m-on:click="this.go($event)" src="./ex_varscope.html">Scoped variables</li>
-            <li m-on:click="this.go($event)" src="./ex_forloop.html">For loop and arrays</li>
+            <li m-on:click="this.go($event)" src="./examples/ex_interpolation.html">interpolation </li>
+            <li m-on:click="this.go($event)" src="./examples/ex_2wdbinding.html">to way data binding</li>
+            <li m-on:click="this.go($event)" src="./examples/ex_eventhandler.html">handling events</li>
+            <li m-on:click="this.go($event)" src="./examples/ex_domlabeling.html">dom elements handling</li>
+            <li m-on:click="this.go($event)" src="./examples/ex_classstyle.html">class/style handling</li>
+            <li m-on:click="this.go($event)" src="./examples/ex_varscope.html">Scoped variables</li>
+            <li m-on:click="this.go($event)" src="./examples/ex_forloop.html">For loop and arrays</li>
         </ul>
         <hr>
         <a href="#">Contact</a>
@@ -29,7 +29,7 @@
 
     <!-- Page content -->
     <div class="main">
-        <iframe width="100%" height="100%" frameBorder=0 src="./intro.html"></iframe>
+        <iframe width="100%" height="100%" frameBorder=0 src="./docs/intro.html"></iframe>
     </div>
 </body>
 <script>
