added tictactoe and space invaders

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </h2>
         <h3 m-on:click="this.go($event)" src="./docs/intro.html">Introduction</h3>
         <h3 m-on:click="this.go($event)" src="./docs/getstarted.html">Get started</h3>
-        <h3 m-on:click="this.go($event)" src="./examples/ex_interpolation.html">Examples</h3>
+        <h3>Examples</h3>
         <ul>
             <li m-on:click="this.go($event)" src="./examples/ex_interpolation.html">interpolation </li>
             <li m-on:click="this.go($event)" src="./examples/ex_2wdbinding.html">to way data binding</li>
@@ -22,6 +22,11 @@
             <li m-on:click="this.go($event)" src="./examples/ex_classstyle.html">class/style handling</li>
             <li m-on:click="this.go($event)" src="./examples/ex_varscope.html">Scoped variables</li>
             <li m-on:click="this.go($event)" src="./examples/ex_forloop.html">For loop and arrays</li>
+        </ul>
+        <h3>Games</h3>
+        <ul>
+            <li m-on:click="this.go($event)" src="./games/tictactoe.html">Tic Tac Toe </li>
+            <li m-on:click="this.go($event)" src="./games/spaceinv.html">Space invaders </li>
         </ul>
         <hr>
         <a href="#">Contact</a>
