added m-if modifier

--- a/examples/ex_varscope.html
+++ b/examples/ex_varscope.html
@@ -15,7 +15,7 @@
         <hr>
     </h1>
 
-    <p>To add a short name to a model value for less usage complexity use m-with tag
+    <p>To add a short name to a model value to reduce expressions complexity use m-with tag
         to affect a model value path to a MC controller variable
         <li>'m-with:' modifier is followed by the variable name to define </li>
         <li> the attribute value is the property path to associate</li>
