--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li m-on:click="this.go($event)" src="./examples/ex_classstyle.html">class/style handling</li>
             <li m-on:click="this.go($event)" src="./examples/ex_varscope.html">Scoped variables</li>
             <li m-on:click="this.go($event)" src="./examples/ex_forloop.html">For loop and arrays</li>
+            <li m-on:click="this.go($event)" src="./examples/ex_ifrendering.html">Conditional rendering</li>
         </ul>
         <h3>Games</h3>
         <ul>
